tests/testcases/02-not_enum.stderr
error: expected enum or match expression
 --> $DIR/02-not_enum.rs:1:1
  |
1 | #[proconio_enum_query::proconio_enum_query]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected enum or match expression
 --> $DIR/02-not_enum.rs:6:1
  |
6 | #[proconio_enum_query::proconio_enum_query]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
